<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Local Mode Group (not foldable) -->
    <PreferenceCategory
        app:key="local_mode_category"
        app:title="@string/settings_local_category">

        <Preference
            app:key="@string/settings_local_jni_key"
            app:title="@string/settings_local_jni_title"
            app:summary="@string/settings_local_jni_summary"/>

        <Preference
            app:key="@string/settings_shutdown_jni_key"
            app:title="@string/settings_shutdown_jni_title"
            app:summary="@string/settings_shutdown_jni_summary"/>

        <SwitchPreferenceCompat
            app:key="@string/settings_local_server_key"
            app:title="@string/settings_local_server_title"
            app:summaryOn="@string/settings_local_server_summary_on"
            app:summaryOff="@string/settings_local_server_summary_off"
            app:defaultValue="false"/>

        <EditTextPreference
            app:key="@string/settings_local_server_address_key"
            app:title="@string/settings_local_server_address_title"
            app:summary="@string/settings_local_server_address_summary"
            app:defaultValue="@string/settings_local_server_address_default"/>

        <EditTextPreference
            app:key="@string/settings_local_adb_address_key"
            app:title="@string/settings_local_adb_address_title"
            app:summary="@string/settings_local_adb_address_summary"
            app:defaultValue="@string/settings_local_adb_address_default"/>

        <EditTextPreference
            app:key="@string/settings_basedir_key"
            app:title="@string/settings_basedir_title"
            app:summary="@string/settings_basedir_summary"
            app:defaultValue="@string/settings_basedir_default"/>

    </PreferenceCategory>

    <!-- Remote Mode Group (not foldable) -->
    <PreferenceCategory
        app:key="remote_mode_category"
        app:title="@string/settings_remote_category">

        <Preference
            app:key="@string/settings_remote_streaming_key"
            app:title="@string/settings_remote_streaming_title"
            app:summary="@string/settings_remote_streaming_summary"/>

        <EditTextPreference
            app:key="@string/settings_remote_streaming_address_key"
            app:title="@string/settings_remote_streaming_address_title"
            app:summary="@string/settings_remote_streaming_address_summary"
            app:defaultValue="@string/settings_remote_streaming_address_default"/>

        <Preference
            app:key="@string/settings_remote_scrcpy_key"
            app:title="@string/settings_remote_scrcpy_title"
            app:summary="@string/settings_remote_scrcpy_summary"/>

        <EditTextPreference
            app:key="@string/settings_remote_adb_address_key"
            app:title="@string/settings_remote_adb_address_title"
            app:summary="@string/settings_remote_adb_address_summary"
            app:defaultValue="@string/settings_remote_adb_address_default"/>

    </PreferenceCategory>

    <!-- Settings Group (foldable) -->
    <PreferenceCategory
        app:key="settings_category"
        app:title="@string/settings_general_category"
        app:initialExpandedChildrenCount="2">

        <SwitchPreferenceCompat
            app:key="@string/settings_verbose_key"
            app:title="@string/settings_verbose_title"
            app:summary="@string/settings_verbose_summary"
            app:defaultValue="false"/>

        <Preference
            app:key="@string/settings_logs_key"
            app:title="@string/settings_logs_title"
            app:summary="@string/settings_logs_summary"/>

        <Preference
            app:key="@string/settings_export_logs_key"
            app:title="@string/settings_export_logs_title"
            app:summary="@string/settings_export_logs_summary"/>

        <Preference
            app:key="@string/settings_clear_logs_key"
            app:title="@string/settings_clear_logs_title"
            app:summary="@string/settings_clear_logs_summary"/>

        <Preference
            app:key="@string/settings_about_key"
            app:title="@string/settings_about_title"
            app:summary="@string/settings_about_summary"/>

    </PreferenceCategory>

</PreferenceScreen>